// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";
import "./Pus142FunctionalMonitoring.proto";


package pusModelEditorMessages.protobuf;

message Pus142Model {
extensions 9 to 109;

  optional ccsds_mal.protobuf.UINTEGER serviceStatus = 1;
  repeated pusModelEditorMessages.protobuf.Pus142FunctionalMonitoring pus142FunctionalMonitoring = 2;
  optional ccsds_mal.protobuf.UINTEGER status = 3;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeServiceStatus = 4;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeServiceStatus = 5;
  optional ccsds_mal.protobuf.ULONG uniqueId = 6;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 7;
  optional ccsds_mal.protobuf.STRING serviceApidName = 8;
}
